Closed Bug 604296 Opened 14 years ago Closed 14 years ago

crash [@ nsEventShell::ApplyToSiblings]

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla2.0b7

People

(Reporter: surkov, Assigned: surkov)

References

Details

(Keywords: access, crash)

Crash Data

Attachments

(1 file)

Attached patch patchSplinter Review
It crashes when reorder event was coalesced and we apply new event rule to its sibling, if reorder event for application accessible is presented in the queue then AccEvent::mNode is null. It's randomly reproducible with applied patch from bug 570275, the patch is moved out from that patch.
Attachment #483088 - Flags: review?(bolterbugz)
Severity: normal → critical
Keywords: crash
Summary: crash nsEventShell::ApplyToSiblings → crash [@ nsEventShell::ApplyToSiblings]
Comment on attachment 483088 [details] [diff] [review]
patch

Fine with me. When does a reorder happen on the application accessible?
Attachment #483088 - Flags: review?(bolterbugz) → review+
(In reply to comment #1)
> Comment on attachment 483088 [details] [diff] [review]
> patch
> 
> Fine with me. When does a reorder happen on the application accessible?

When root accessible is appended. It was startup crash.
landed on 2.0 - http://hg.mozilla.org/mozilla-central/rev/cff1852ca58f
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b8
Target Milestone: mozilla2.0b8 → mozilla2.0b7
Crash Signature: [@ nsEventShell::ApplyToSiblings]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: