Bug 604296 - crash [@ nsEventShell::ApplyToSiblings], r=davidb, a=blocking